# sys-dyna

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
data/: seed_sessions.json  seed_simulation_results.json  seed_users.json
docs/: design_v2.md
scripts/: init_db.py
src/sys_dyna/: __init__.py  auth.py  config.py
src/sys_dyna/agents/: __init__.py  simulation_agent.py  tools.py
src/sys_dyna/db/: __init__.py  connection.py  schema.sql
src/sys_dyna/graph/: __init__.py  builder.py  gemini_planner.py  heuristic_planner.py  planner.py  runner.py  state.py
src/sys_dyna/llm/: __init__.py  client.py  mock_client.py  prompts.py
src/sys_dyna/orchestrator/: __init__.py  agentic_search.py
src/sys_dyna/repository/: __init__.py  sessions.py  simulation_results.py  tool_call_logs.py  users.py
src/sys_dyna/simulation/: __init__.py  catalog.py  engine.py  models.py  objective.py
src/sys_dyna/simulation/analysis/: __init__.py  bayesopt.py  defaults.py  distributions.py  montecarlo.py
src/sys_dyna/simulation/catalog_models/: sales_growth.py  sales_growth.xmile
src/sys_dyna/tools/: __init__.py  base.py  get_session_full.py  get_simulation_results.py  query_sessions.py  registry.py
src/sys_dyna/ui/: charts.py  chat.py  param_confirm.py  sidebar.py
supabase/migrations/: 0001_init.sql
tests/: conftest.py  test_analysis_graph.py  test_app_ui.py  test_bayesopt.py  test_charts.py  test_gemini_planner.py  test_graph.py  test_mock_llm.py  test_montecarlo.py  test_objective.py  test_orchestrator.py  test_repository.py  test_runner.py  test_simulation.py  test_simulation_agent.py  test_tools.py
